# 1balancer-near

./: .gitignore  BUILD-FIX-SUMMARY.md  Cargo.toml  Makefile  README.md
.cargo-near/: config.toml
contracts/fusion-plus-htlc/: ABI_GENERATION_NOTE.md  Cargo.toml  README.md  build-without-abi.sh  build.sh
contracts/fusion-plus-htlc/.cargo-near/: config.toml
contracts/fusion-plus-htlc/src/: ft_receiver.rs  lib.rs  tests.rs  types.rs  utils.rs
contracts/fusion-plus-htlc/src/cross_chain/: coordinator.rs  events.rs  mod.rs
contracts/fusion-plus-htlc/src/htlc/: create.rs  mod.rs  refund.rs  withdraw.rs
contracts/fusion-plus-htlc/tests/integration/: test_cross_chain.rs
contracts/fusion-plus-htlc/tests/unit/: test_htlc.rs
contracts/shared/chain-signatures/: Cargo.toml
contracts/shared/chain-signatures/src/: lib.rs
contracts/solver-registry/: Cargo.toml  build.sh
contracts/solver-registry/.cargo-near/: config.toml
contracts/solver-registry/src/: lib.rs
docs/: ARCHITECTURE.md  BUILD-OPTIMIZATION.md  CROSS-CHAIN-WORKFLOW.md  DEPLOYMENT-GUIDE.md  DEVELOPMENT.md  NEAR-SDK5-MIGRATION.md  SECURITY-ARCHITECTURE.md  SYSTEM-ARCHITECTURE.md
integration-tests/: package.json  run-tests.sh  tsconfig.json
integration-tests/mocks/: BaseEscrowFactory.json  FusionPlusHub.json
integration-tests/scenarios/: test-setup.test.ts
integration-tests/scenarios/edge-cases/: timeout-scenarios.test.ts
integration-tests/scenarios/happy-path/: cross-chain-swap.test.ts
integration-tests/scenarios/security/: security-tests.test.ts
integration-tests/setup/: test-config.ts
integration-tests/utils/: helpers.ts
scripts/: build-contract.sh
scripts/deploy/: deploy-testnet.sh
scripts/test/: run-integration.sh
shade-agent-solver/: .env.example  Dockerfile  package.json
shade-agent-solver/src/: index.ts
