[workspace]
resolver = "2"
members = [
    "contracts/fusion-plus-htlc",
    "contracts/solver-registry",
    "contracts/shared/chain-signatures",
]

[workspace.dependencies]
near-sdk = "5.0.0"
near-workspaces = "0.14"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true